src/objects/Address__c.object
<CustomObject>
    <description>Holds addresses relating to an account.</description>
    <fields>
        <fullName>AMA_Check_List__c</fullName>
        <label>AMA U.S. On Hold List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_U_S_hold_status__c</fullName>
        <label>AMA U.S. hold status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary finance hold</fullName>
                </value>
                <value>
                    <fullName>Prior collection issue</fullName>
                </value>
                <value>
                    <fullName>Outstanding collection issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMA_U_S_hold_status_details__c</fullName>
        <label>AMA U.S. hold status details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_Database_Licensee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMA Database Licensee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMA_SAP_Code__c</fullName>
        <description>Created under ER-3352</description>
        <inlineHelpText>It is used for AMA Billing SAP Report only</inlineHelpText>
        <label>AMA SAP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMA_Special_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created under Issue-11689</description>
        <label>AMA Special Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academia_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Supriya Johari under ER-3285</description>
        <label>Academia Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMS Customers General</fullName>
                    <default>true</default>
                    <label>IMS Customers General</label>
                </value>
                <value>
                    <fullName>IMS Intercompany Customer</fullName>
                </value>
                <value>
                    <fullName>IMS Customers Local Tax Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the account that this address pertains to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>AccountAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Name_Local__c</fullName>
        <label>Additional Name (Local)</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Name__c</fullName>
        <label>Additional Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_Local__c</fullName>
        <inlineHelpText>Address Line 1(Local) is Mandatory when the PO Box is blank and language is selected.</inlineHelpText>
        <label>Address Line 1 (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <inlineHelpText>Address Line 1 is Mandatory when the PO Box is blank.</inlineHelpText>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_Local__c</fullName>
        <label>Address Line 2 (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3_Local__c</fullName>
        <label>Address Line 3 (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Under ESPSFDCQI-15861</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Number_Local__c</fullName>
        <description>ESPSFDCQI-15874</description>
        <label>Building Number (Local)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Number__c</fullName>
        <description>ESPSFDCQI-15874</description>
        <label>Building Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Enter the account location&apos;s City/Town name here</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Loyalty_Segment__c</fullName>
        <inlineHelpText>Segmentation used when IMS sends out Customer Loyalty surveys.</inlineHelpText>
        <label>Client Loyalty Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segment 1 Less than $10 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 2  $5–10 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 3  $3–5 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 4  $1–3 M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 5  &lt; $1 M annual spend in that country (large markets only)</fullName>
                </value>
                <value>
                    <fullName>Segment 6  $750k –$1M annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 7  $500k–750k annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 8  $250k–500k annual spend in that country</fullName>
                </value>
                <value>
                    <fullName>Segment 9  &lt; $250k annual spend in that country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Ind. Competitive Prod/Serv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Choose the account location&apos;s country from the picklist.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Classification__c</fullName>
        <label>Customer Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not known</fullName>
                    <default>true</default>
                    <label>Not known</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma Generica</fullName>
                </value>
                <value>
                    <fullName>Pharma Branded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DIR_Code_Spain_Only__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8891</description>
        <inlineHelpText>The DIR Codes are three alphanumeric codes necessary to correctly send e-invoices to public administration offices.</inlineHelpText>
        <label>DIR Code (Spain Only)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-7138</description>
        <label>Deleted Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses (Deleted Account)</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Local__c</fullName>
        <label>Description (Local)</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Optional description</inlineHelpText>
        <label>Description</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>CRM-MC-ESPSFDCQI-7541</description>
        <label>E Invoice Email Addresses</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>ESPSFDCQI-17668</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enabled_Sales_Orgs__c</fullName>
        <label>Enabled Sales Orgs</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enabled_Sales_Orgs_and_Payment_Terms__c</fullName>
        <description>ESPSFDCQI-11636</description>
        <label>Enabled Sales Orgs and Payment Terms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enabled_for_Email_invoicing__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8891</description>
        <inlineHelpText>By selecting Yes, you are requesting to have the customer document output type enabled for email.</inlineHelpText>
        <label>Enabled for Email invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <inlineHelpText>Fax number at this address</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Has_AMA_Perpetual_Agreement_U_S_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has AMA Perpetual Agreement (U.S. Only):</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Number_Local__c</fullName>
        <description>ESPSFDCQI-15874</description>
        <label>House Number (Local)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <description>ESPSFDCQI-15874</description>
        <label>House Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Car Seller [CS]</fullName>
                </value>
                <value>
                    <fullName>Food-Cleansers-Comse [11]</fullName>
                </value>
                <value>
                    <fullName>Hospital [HH]</fullName>
                </value>
                <value>
                    <fullName>OFFIC.ΑΝ 89/67 &amp; 342 [10]</fullName>
                </value>
                <value>
                    <fullName>Other [OT]</fullName>
                </value>
                <value>
                    <fullName>Pharm. Company [PC]</fullName>
                </value>
                <value>
                    <fullName>Pharm. Industry [PI]</fullName>
                </value>
                <value>
                    <fullName>Private Person [AM]</fullName>
                </value>
                <value>
                    <fullName>Sect Health,Agr.Chem [SH]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_City__c</fullName>
        <label>City (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Country__c</fullName>
        <label>Country (Local)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Name__c</fullName>
        <label>Customer Name (Local)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_PostalCode__c</fullName>
        <label>Postal Code (Local)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_State__c</fullName>
        <label>Region / State (Local)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Street__c</fullName>
        <label>Street (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AMA_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify if this account is associated with AMA</description>
        <label>Is AMA Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_TPA_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked only when an account is created for TPA Functionality</inlineHelpText>
        <label>Is TPA Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                    <label>Arabic [ar]</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Chinese [C]</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Chinese Tradtional [M]</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Cyrillic [R]</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Greek [G]</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Hangul [H]</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Indonesian [1]</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Kanji [K]</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Firm_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by supriya johari under ER-3285</description>
        <label>Legal Firm Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDMID__c</fullName>
        <description>MDM Key generated By MDM System.</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDM_Latest_Submission_Date__c</fullName>
        <description>SFDCDEVOPS-186: Everytime is Record submitted for MDM validation datetime gets saved in that field.</description>
        <label>MDM Latest Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Comments__c</fullName>
        <description>SFDCDEVOPS-186: The comment received from MDM System as part of validation Process.</description>
        <label>MDM Validation Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Status__c</fullName>
        <description>SFDCDEVOPS-186: The validation state of this address with respect to MDM System.</description>
        <label>MDM Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unvalidated</fullName>
                    <default>true</default>
                    <label>Unvalidated</label>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this address marked for deletion in SAP</description>
        <label>Marked For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Sales_Org__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8891</description>
        <inlineHelpText>The organizational unit responsible for the sale of products or services.</inlineHelpText>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>[AE01] Dimensions Healthcare</fullName>
                </value>
                <value>
                    <fullName>[AE02] IQVIA AG - Dubai Branch</fullName>
                </value>
                <value>
                    <fullName>[AE03] Ocshi Solutions &amp; Services</fullName>
                </value>
                <value>
                    <fullName>[AR01] IQVIA Solutions Argentina S.A.</fullName>
                </value>
                <value>
                    <fullName>[AT52] IQVIA Information Solutions GmbH</fullName>
                </value>
                <value>
                    <fullName>[AU01] IQVIA Solutions Australia Pty. Ltd</fullName>
                </value>
                <value>
                    <fullName>[AU06] IMR International (Australia) Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>[AU07] Ascott Sales Integration PL</fullName>
                </value>
                <value>
                    <fullName>[AU08] Nuevo Health Pty Limited</fullName>
                </value>
                <value>
                    <fullName>[BD01] IMS Health Bangladesh Ltd</fullName>
                </value>
                <value>
                    <fullName>[BE51] IQVIA Solutions Belgium BVBA/SPRL</fullName>
                </value>
                <value>
                    <fullName>[BE52] Forcea NV</fullName>
                </value>
                <value>
                    <fullName>[BE63] REDPHARMA SA</fullName>
                </value>
                <value>
                    <fullName>[BE64] Omni Care Consult BV</fullName>
                </value>
                <value>
                    <fullName>[BE74] IM Associates BV</fullName>
                </value>
                <value>
                    <fullName>[BO01] IMS Bolivia</fullName>
                </value>
                <value>
                    <fullName>[BR01] IMS Brazil</fullName>
                </value>
                <value>
                    <fullName>[BR71] IMS Health SoluÃ§Ãµes de Tecnologia do Brasil Ltda.</fullName>
                </value>
                <value>
                    <fullName>[CA03] IMS Health Canada Consulting</fullName>
                </value>
                <value>
                    <fullName>[CA10] Privacy Analytics Inc.</fullName>
                </value>
                <value>
                    <fullName>[CH07] IQVIA AG, Branch Basel</fullName>
                </value>
                <value>
                    <fullName>[CH51] IQVIA AG</fullName>
                </value>
                <value>
                    <fullName>[CL01] ASESORIAS IQVIA SOLUTIONS CHILE LIMITADA</fullName>
                </value>
                <value>
                    <fullName>[CL04] Iasist S.A.U. agencia En Chile</fullName>
                </value>
                <value>
                    <fullName>[CN03] IQVIA Solutions Enterprise Management Consulting (Shanghai) Co., Ltd</fullName>
                </value>
                <value>
                    <fullName>[CN06] IQVIA Solutions Enterprise Management Consulting (Hainan) Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>[CN08] SH Illuminera</fullName>
                </value>
                <value>
                    <fullName>[CN71] IMS Health Technology Solutions China Co. Ltd.</fullName>
                </value>
                <value>
                    <fullName>[CO01] IQVIA SOLUTIONS COLOMBIA S.A.</fullName>
                </value>
                <value>
                    <fullName>[CO71] IQVIA TECHNOLOGY SOLUTIONS COLOMBIA LTDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Vendor_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the vendor is new to TPA</description>
        <label>New Vendor Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OKC_Id__c</fullName>
        <description>ID of the customer record in OneKey Customer</description>
        <inlineHelpText>ID of the customer record in OneKey Customer</inlineHelpText>
        <label>OneKey Customer Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_BOX_Post_Code__c</fullName>
        <description>CRM-MC-ESPSFDCQI-8891</description>
        <inlineHelpText>Postal code that is required for a unique assignment of the PO box.</inlineHelpText>
        <label>PO BOX Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TPA-MC-ESPSFDCTPA-453-Parent address lookup</description>
        <label>Parent Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <errorMessage>Parent Vendor Address is either not a TPA address or a primary vendor address.</errorMessage>
            <filterItems>
                <field>Address__c.Is_TPA_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Address__c.Primary_Vendor_Address__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Child Vendor Addresses</relationshipLabel>
        <relationshipName>ChildAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>Payment Terms higher than 30 days require MSA to be provided to MDM</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000-Default Payment Terms of Customer Master Data</fullName>
                </value>
                <value>
                    <fullName>0001-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZA00-Payable within 30 days</fullName>
                </value>
                <value>
                    <fullName>ZB00-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZB03-Within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB05-payable within 5 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB07-payable within 7 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB10-payable within 10 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB14-payable within 14 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB15-payable within 15 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB20-payable within 20 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB21-payable within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB28 – Payable within 28 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB30-Payable within 30 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB3M-30 days end of month</fullName>
                </value>
                <value>
                    <fullName>ZB45-payable within 45 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB50-Payable within 50 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB60-payable within 60 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB75-payable within 75 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB90-Within 90 Days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB97-payable immediately upon receipt</fullName>
                </value>
                <value>
                    <fullName>ZBD4-payment due 30 days after invoice date</fullName>
                </value>
                <value>
                    <fullName>ZBD5-1.5 % discount within 10 days</fullName>
                </value>
                <value>
                    <fullName>ZBD6-3 % discount within 14 days</fullName>
                </value>
                <value>
                    <fullName>ZBFR-Payment terms France</fullName>
                </value>
                <value>
                    <fullName>ZBMA-Payment terms Morocco</fullName>
                </value>
                <value>
                    <fullName>ZBTN-Payment terms Tunesia</fullName>
                </value>
                <value>
                    <fullName>ZGR5-Other</fullName>
                </value>
                <value>
                    <fullName>ZI01- 45 Days after invoice end of Month</fullName>
                </value>
                <value>
                    <fullName>ZI45-End of Month + 45 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perpetual_Agreement_Date__c</fullName>
        <label>Perpetual Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharma_Company_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by supriya johari under ER-3285</description>
        <label>Pharma Company Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Telephone number for this location address with area code</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <inlineHelpText>Enter the account location&apos;s postal code as complete as possible here.</inlineHelpText>
        <label>PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-453-When checked, the address becomes the Primary Vendor record for vendors with multiple vendor addresses.</description>
        <label>Primary Vendor Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Territory__c</fullName>
        <formula>IF(Account__c != null, IF(ISBLANK(TEXT(Account__r.Region_Territory__c)) , TEXT(Account__r.AccountCountry__c), TEXT(Account__r.Region_Territory__c)) , 
		IF(ISBLANK(TEXT(Deleted_Account__r.Region_Territory__c)), TEXT(Deleted_Account__r.AccountCountry__c), (TEXT(Deleted_Account__r.Region_Territory__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
</CustomObject>